=================
p4a.video Changes
=================

p4a.video (unreleased)
======================

* Now uses standard plone/cmf comments instead of easycommenting
  (Rocky Burt)

* Now uses p4a.subtyper to expose video subtype action (Rocky Burt)


p4a.video 1.0 (2007-11-28)
==========================

Features
--------

* Default video container view has been updated (Rocky Burt)

* Added description field to IVideo and subsequent views (Rocky Burt)


p4a.video 1.0beta1 (2007-07-31)
===============================

* Various bug fixes and general improvments.


p4a.video 1.0alpha1 (2007-04-29)
================================

* First release.